--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -12,6 +12,9 @@
   --font-size-smalltext: 12px;
 }
 body {
-  margin: 0;
+  margin: 0px 16px;
   padding: 0;
+  overflow-x: hidden;
+  font-family: var(--font-family);
+  color: var(--font-color);
 }
