--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -8,9 +8,17 @@
   --border-radius: 8px;
   --border-stroke: 1px solid;
   --font-size-bodytext: 16px;
-  --font-size-headings: 32px;
+  --font-size-h1: 32px;
+  --font-size-h2: 24px;
   --font-size-smalltext: 12px;
 }
+/* Reset styles */
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
 body {
   margin: 16px 16px 48px 16px;
   padding: 0;
@@ -18,13 +26,15 @@ body {
   font-family: var(--font-family);
   color: var(--font-color);
   p {
-    margin: 0;
-    padding: 0;
+    font-size: var(--font-size-bodytext);
   }
 
   h1 {
-    font-size: var(--font-size-headings);
-    margin: 0;
-    padding: 0;
+    font-size: var(--font-size-h1);
+  }
+
+  h2 {
+    font-size: var(--font-size-h2);
+    padding-bottom: 12px;
   }
 }
